# Bukit-Inventory-Manager

./: CMakeLists.txt  Electronics.cpp  Electronics.h  FileTech.cpp  FileTech.h  Foodstuffs.cpp  Foodstuffs.h  Inventory.cpp  Inventory.h  Product.cpp  Product.h  README.md  main.cpp
